ticket/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airlines-ticket
  namespace: airlines-backend-microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airlines-ticket
  template:
    metadata:
      labels:
        app: airlines-ticket
    spec:
      containers:
        - name: airlines-ticket
          image: default-route-openshift-image-registry.apps-crc.testing/airlines-backend-microservices/airlines-ticket:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
