ticket/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airlines-ticket
  namespace: airlines-backend-microservices
spec:
  selector:
    app: airlines-ticket
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
