ticket/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: airlines-ticket
  namespace: airlines-backend-microservices
spec:
  to:
    kind: Service
    name: airlines-ticket
  port:
    targetPort: 8080
  tls:
    termination: edge
